# RealGasModel

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.compile  README.md  constants.inc  engine.cpp  engine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: conf.json
src/: analyze.py  conf.json  controller.cpp  controller.h  engine.cpp  engine.h  impulse.py  logger.cpp  logger.h  main.cpp  msd.py  output_formatter.cpp  render.h  velocity_analyze.py  visualisation.cpp  visualisation.h
src/examine/: impulse.py  msd.py  self_diff_coef.py  velocity_analyze.py
